--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section class="aboutme" id="aboutme">
         <hr>
-        <h3 class="h3aboutme">About Me</h3>
+        <h3 class="h3title">About Me</h3>
         <div id="about-section">
             <p class="paboutme">
                 Hi! My name is Vanya, my nickname is Fuzy. I’m a beginner web designer and programmer, learning to build websites from scratch. I enjoy trying different styles and layouts, and I want to learn how to make pages user-friendly. Right now, I’m practicing on personal projects and small sites, studying HTML and CSS. My goal is to improve my coding skills and, over time, create beautiful, modern, and functional web pages that are enjoyable to use.
@@ -62,7 +62,7 @@
 
     <section class="myproject" id="projects">
         <hr>
-        <h3 class="h3proj">My Projects</h3>
+        <h3 class="h3title">My Projects</h3>
         <div class="projects-container">
             <div class="card">
                 <a href="https://fuzy-code.github.io/tribute-page.github.io/" target="_blank" class="project-tile">
@@ -92,6 +92,14 @@
     </section>
 
     <section id="certificate">
+        <hr>
+        <h3 class="h3title">My Certificate</h3>
+        <div class="certificate1">
+          <a href="https://www.freecodecamp.org/certification/fuzy/responsive-web-design" target="_blank">
+            <img src="images/certificate1.png" alt="certificate1" class="imgcertificate1">
+            <h3>Responsive Web Design</h3>
+            </a>
+        </div>
     </section>
 </main>
 </body>
