--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <title>Fuzy Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -23,22 +25,31 @@
 <main>
     <section id="welcome-section">
         <div class="metext">
-            <h1 class="h1home">Hi, I’m Fuzy.</h1>
-            <p class="phome">Frontend Developer</p>
+            <p class="pwelcome">Hi, I’m <span class="fuzy">Fuzy</span></p>
+            <h2 class="h2home"><span class="typping"><span class="typping1">I'm a </span>Designer</span></h2>
+            <p class="phome">Web designer passionate about creating creative and stylish websites using HTML and CSS, ready to help bring your ideas to life, and also a beginner developer.</p>
             <div class="abuttondiv">
                 <a id="profile-link" href="https://github.com/Fuzy-Code" target="_blank" class="abutton">My GitHub</a>
+                <a href="https://mail.google.com/mail/?view=cm&to=fuzyjob@gmail.com" target="_blank" class="abutton1">Contact Me</a>
             </div>    
+            <div class="socials">
+              <span class="socialspan"><a class="asocials" href="https://discord.gg/BF4kKa2G5F" target="_blank"><i class="fab fa-discord"></i></a></span>
+              <span class="socialspan"><a class="asocials" href="https://www.instagram.com/wyraem/" target="_blank"><i class="fab fa-instagram"></i></a></span>
+            </div>
         </div>
         <img src="images/me.jpg" alt="me" class="mefoto">
+
+        
+        
     </section>
 
     <section class="aboutme" id="aboutme">
         <hr>
+        <div class="divpadding"></div>
         <h3 class="h3title">About Me</h3>
         <div id="about-section">
             <p class="paboutme">
-                Hi! My name is Vanya, my nickname is Fuzy. I’m a beginner web designer and programmer, learning to build websites from scratch. I enjoy trying different styles and layouts, and I want to learn how to make pages user-friendly. Right now, I’m practicing on personal projects and small sites, studying HTML and CSS. My goal is to improve my coding skills and, over time, create beautiful, modern, and functional web pages that are enjoyable to use.
-            </p>
+Hi! My name is Vanya, my nickname is Fuzy. I’m a beginner web designer and developer, learning to build websites from scratch. Right now, I’m practicing on personal projects and small sites, studying HTML and CSS. My goal is to improve my coding skills and, over time, create beautiful, modern, and functional web pages that are enjoyable to use. I also enjoy experimenting with responsive design and simple animations, and I use tools like VS Code to bring my ideas to life. I strive to create visually appealing and user-friendly websites.            </p>
         </div>
 
         <div class="infomecontainer">
@@ -64,30 +75,38 @@
         <hr>
         <h3 class="h3title">My Projects</h3>
         <div class="projects-container">
-            <div class="card">
-                <a href="https://fuzy-code.github.io/tribute-page.github.io/" target="_blank" class="project-tile">
-                    <img src="images/histori.png" alt="Tribute Page" class="proj-img">
-                    <h4>Tribute Page</h4>
-                </a>
-            </div>
-            <div class="card">
-                <a href="https://fuzy-code.github.io/survey-form.github.io/" target="_blank" class="project-tile">
-                    <img src="images/form.png" alt="Survey Form" class="proj-img">
-                    <h4>Survey Form</h4>
-                </a>
-            </div>
-            <div class="card">
-                <a href="https://fuzy-code.github.io/documentation.github.io/" target="_blank" class="project-tile">
-                    <img src="images/document.png" alt="Documentation" class="proj-img">
-                    <h4>Documentation</h4>
-                </a>
-            </div>
-            <div class="card">
-                <a href="https://fuzy-code.github.io/camping.github.io/" target="_blank" class="project-tile">
-                    <img src="images/camping.png" alt="Camping" class="proj-img">
-                    <h4>Camping</h4>
-                </a>
-            </div>
+<div class="card">
+    <a href="https://fuzy-code.github.io/tribute-page.github.io/" target="_blank" class="project-tile">
+        <img src="images/histori.png" alt="Tribute Page" class="proj-img">
+        <h4>Tribute Page</h4>
+            <p class="pview">View</p>
+    </a>
+</div>
+
+<div class="card">
+    <a href="https://fuzy-code.github.io/survey-form.github.io/" target="_blank" class="project-tile">
+        <img src="images/form.png" alt="Survey Form" class="proj-img">
+        <h4>Survey Form</h4>
+            <p class="pview">View</p>
+    </a>
+</div>
+
+<div class="card">
+    <a href="https://fuzy-code.github.io/documentation.github.io/" target="_blank" class="project-tile">
+        <img src="images/document.png" alt="Documentation" class="proj-img">
+        <h4>Documentation</h4>
+            <p class="pview">View</p>
+    </a>
+</div>
+
+<div class="card">
+    <a href="https://fuzy-code.github.io/camping.github.io/" target="_blank" class="project-tile">
+        <img src="images/camping.png" alt="Camping" class="proj-img">
+        <h4>Product Landing Page</h4>
+            <p class="pview">View</p>
+    </a>
+</div>
+
         </div>
     </section>
 
@@ -102,5 +121,6 @@
         </div>
     </section>
 </main>
+
 </body>
 </html>
